--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,33 @@
 body {
 	background-color: rgb(255, 255, 255);
 }
+
+h1 {
+	margin: 0 auto;
+}
+
+table {
+	margin: auto;
+}
+
+td {
+	border: 2px solid black;
+	width: 100px;
+	height: 100px;
+}
+
+tr:nth-of-type(1) td {
+	border-top: 0px;
+}
+
+tr:nth-of-type(3) td {
+	border-bottom: 0px;
+}
+
+tr td:first-child{
+	border-left: 0px;
+}
+
+tr td:last-child {
+	border-right: 0px;
+}
