--- a/album_site/photoStyles.css
+++ b/album_site/photoStyles.css
@@ -1,3 +1,15 @@
+/* font-family: 'Ubuntu', sans-serif; */
+
+h1 {
+    font-family: 'Ubuntu', sans-serif;
+    text-transform: uppercase;
+    margin-left: 1.66%;
+
+    border-bottom: 3px solid #f1f1f1;
+    width:  30%;
+    padding-bottom: 20px;
+}
+
 img {
     width: 30%;
     float: left;
