--- a/blog_site/css/styles.css
+++ b/blog_site/css/styles.css
@@ -1,15 +1,24 @@
 /* font-family: 'ZCOOL KuaiLe', cursive; */
 
 body {
-    /* background: red; */
     font-family: 'ZCOOL KuaiLe', cursive;
     border: 20px solid grey;
     padding: 20px;
-    margin: auto;
+    margin: 30px auto;
     width: 50%;
 }
 
 div p:nth-of-type(2){
     border-left: 4px solid grey;
-    padding-left: 20px;;
+    padding-left: 5px;;
+}
+
+.post {
+
+}
+
+.date {
+    color: aqua;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
 }
