--- a/bootstrap/css/styles.css
+++ b/bootstrap/css/styles.css
@@ -8,5 +8,14 @@ body {
 }
 
 .navbar {
-    /* background-color: pink; */
+    background-color: #FA7298;
+    color: white;
+}
+
+.navbar-default .navbar-brand {
+    color: white;
+}
+
+.navbar-default .navbar-nav>li>a {
+    color: white;
 }
