--- a/jquery/styles.css
+++ b/jquery/styles.css
@@ -7,15 +7,21 @@ body {
     padding: 20px;
 }
 
+h1 {
+    background-color: #FC00FF;
+    margin: 0;
+}
+
 #container {
     background: #f7f7f7;
-    border-radius: 4px;
-    padding: 20px;
+    border-radius: 5px;
+    /* padding: 20px; */
     font-size: 25px;
     text-align: center;
     transition: all 0.2s;
-    margin: 100px auto;
+    margin:  auto;
     width: 500px;
+    box-shadow: 0 0 0 rgba(255, 255, 0, 0.1);
 }
 
 button {
@@ -25,6 +31,11 @@ button {
     padding: 8px 14px;
     font-size: 15px;
     color: #fff;
+    margin: 2px;
+}
+
+#btn {
+    width: 100%;
 }
 
 .item {
@@ -33,10 +44,32 @@ button {
     width: auto;
 }
 
+input {
+    width: 100%;
+    padding: 13px 13px 13px 20px;
+    box-sizing: border-box;
+}
+
+input:focus {
+    background: #FFFFFF;
+    border: 2px #FC00FF solid;
+    outline: none;
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
 li {
     margin: auto;
-    border: 2px #FC00FF solid;
     list-style-type: none;
+    background-color: #fff;
+}
+
+li:nth-child(2n) {
+    background: #fdd8d8;
 }
 
 li span {
